syntax = "proto3";

option java_multiple_files = true;
option java_package = "maratmingazovr.spring_boot_3_weather.weather.grpc";
option java_outer_classname = "WeatherProto";

package weather;

service WeatherService {
  rpc GetWeather (WeatherRequest) returns (WeatherResponse);
}

message WeatherRequest {
  optional string city = 1;
}

message WeatherResponse {
  string json = 1;
}